@@ -592,7 +592,7 @@ void TestGMatrixSymmetric::matrix_functions(void)
     test_value(sum, value, 1.0e-20, "Test sum function");
 
     // Transpose function
-	GMatrixSymmetric test1 = transpose(m_test);
+	GMatrixSymmetric test1 = m_test.transpose();
     test_assert(check_matrix(m_test), "Test source matrix");
     test_assert(check_matrix(test1, 1.0, 0.0),
                 "Test transpose(GMatrixSymmetric) function",
@@ -659,29 +659,23 @@ void TestGMatrixSymmetric::matrix_compare(void)
 void TestGMatrixSymmetric::matrix_cholesky(void)
 {
     // Test Cholesky decomposition
-	GMatrixSymmetric cd           = cholesky_decompose(m_test);
-	GMatrix    cd_lower     = cd.extract_lower_triangle();
-	GMatrix    cd_upper     = transpose(cd_lower);
-	GMatrix    cd_product   = cd_lower * cd_upper;
-	GMatrix    cd_residuals = GMatrix(m_test) - cd_product;
-	double res = (abs(cd_residuals)).max();
+	GMatrixSymmetric cd           = m_test.cholesky_decompose();
+	GMatrix          cd_lower     = cd.extract_lower_triangle();
+	GMatrix          cd_upper     = cd_lower.transpose();
+	GMatrix          cd_product   = cd_lower * cd_upper;
+	GMatrix          cd_residuals = GMatrix(m_test) - cd_product;
+	double res = (cd_residuals.abs()).max();
     test_value(res, 0.0, 1.0e-15, "Test cholesky_decompose() method");
 
     // Test compressed Cholesky decomposition
     GMatrixSymmetric test_zero         = set_matrix_zero();
-	GMatrixSymmetric cd_zero           = cholesky_decompose(test_zero);
-	GMatrix    cd_zero_lower     = cd_zero.extract_lower_triangle();
-	GMatrix    cd_zero_upper     = transpose(cd_zero_lower);
-	GMatrix    cd_zero_product   = cd_zero_lower * cd_zero_upper;
-	GMatrix    cd_zero_residuals = GMatrix(test_zero) - cd_zero_product;
-	res = (abs(cd_zero_residuals)).max();
+	GMatrixSymmetric cd_zero           = test_zero.cholesky_decompose();
+	GMatrix          cd_zero_lower     = cd_zero.extract_lower_triangle();
+	GMatrix          cd_zero_upper     = cd_zero_lower.transpose();
+	GMatrix          cd_zero_product   = cd_zero_lower * cd_zero_upper;
+	GMatrix          cd_zero_residuals = GMatrix(test_zero) - cd_zero_product;
+	res = (cd_zero_residuals.abs()).max();
     test_value(res, 0.0, 1.0e-15, "Test compressed cholesky_decompose() method");
-
-	// Test Cholesky inplace decomposition
-	GMatrixSymmetric test = m_test;
-    test.cholesky_decompose();
-	GMatrix cd_lower2 = test.extract_lower_triangle();
-    test_assert((cd_lower2 == cd_lower), "Test inplace cholesky_decompose() method");
 
     // Test Cholesky solver (first test)
 	GVector e0(g_rows);
@@ -730,7 +724,7 @@ void TestGMatrixSymmetric::matrix_cholesky(void)
 	a0[2] = 0.0;
 	a0[3] = g_matrix[6];
 	s0    = cd_zero.cholesky_solver(a0) - e0;
-	res   = max(abs(s0));
+	res = max(abs(s0));
     test_value(res, 0.0, 1.0e-15, "Test compressed cholesky_solver() method");
 
     // Test compressed Cholesky solver (second test)
@@ -743,7 +737,7 @@ void TestGMatrixSymmetric::matrix_cholesky(void)
 	a0[2] = 0.0;
 	a0[3] = g_matrix[7];
 	s0    = cd_zero.cholesky_solver(a0) - e0;
-	res   = max(abs(s0));
+	res = max(abs(s0));
     test_value(res, 0.0, 1.0e-15, "Test compressed cholesky_solver() method");
 
     // Test compressed Cholesky solver (third test)
@@ -756,27 +750,25 @@ void TestGMatrixSymmetric::matrix_cholesky(void)
 	a0[2] = 0.0;
 	a0[3] = g_matrix[8];
 	s0    = cd_zero.cholesky_solver(a0) - e0;
-	res   = max(abs(s0));
+	res = max(abs(s0));
     test_value(res, 0.0, 1.0e-15, "Test compressed cholesky_solver() method");
 
 	// Test Cholesky inverter
 	GMatrixSymmetric unit(g_rows,g_cols);
 	unit(0,0) = unit(1,1) = unit(2,2) = 1.0;
-	GMatrixSymmetric test_inv = m_test;
-	test_inv.cholesky_invert();
-    GMatrix ci_product   = m_test * test_inv;
-    GMatrix ci_residuals = ci_product - unit;
-	res = (abs(ci_residuals)).max();
+	GMatrixSymmetric test_inv     = m_test.cholesky_invert();
+    GMatrix          ci_product   = m_test * test_inv;
+    GMatrix          ci_residuals = ci_product - unit;
+	res = (ci_residuals.abs()).max();
     test_value(res, 0.0, 1.0e-15, "Test cholesky_invert method");
 
 	// Test Cholesky inverter for compressed matrix
 	unit = GMatrixSymmetric(4,4);
 	unit(0,0) = unit(1,1) = unit(3,3) = 1.0;
-	GMatrixSymmetric test_zero_inv = test_zero;
-	test_zero_inv.cholesky_invert();
-    GMatrix ciz_product   = test_zero * test_zero_inv;
-    GMatrix ciz_residuals = ciz_product - unit;
-	res = (abs(ciz_residuals)).max();
+	GMatrixSymmetric test_zero_inv = test_zero.cholesky_invert();
+    GMatrix          ciz_product   = test_zero * test_zero_inv;
+    GMatrix          ciz_residuals = ciz_product - unit;
+	res = (ciz_residuals.abs()).max();
     test_value(res, 0.0, 1.0e-15, "Test compressed cholesky_invert method");
 
     // Return
